# pal_cpp

./: 01_howto.txt  CMakeLists.txt  MST.cpp  README.md  bfs-paths-parents.cpp  boyermoore.cpp  cmds.txt  combinatorics.cpp  connected.cpp  dfs_colored_topsort.cpp  kosaraju.cpp  levenstein.cpp  subsets.cpp
00_lib/: MST.cpp  cmds.txt  connectivity.cpp  euler-path.cpp  isomorfism_check.cpp  longest-dag-path.cpp  shortest-path-dag.cpp  skiplist.cpp  topsort.cpp  tree-cert.cpp  trie.cpp
00_lib/isomo/: isomorfism_check.cpp  tree-cert.cpp
00_lib/scc/: kosaraju.cpp  tarjan.cpp
00_lib/subsets/: combinatorics.cpp  cp-alg-k-combinations.cpp  netw_subseter.cpp  repe-combs.cpp
00_lib/text/: hamming.cpp  levenstein.cpp
00_lib/traversals/: dfs-time-color.cpp
00_library/: library.cpp  library.h
00_pre_fel/: dfs-colored-topsort.cpp  kosaraju.cpp
01_calamity/: README.md  calamity.cpp  fast_dist_assign.cpp  feed_pubs.sh  prim_heap.cpp
02_pooldel/: README.md  pooldel.cpp  postup.txt  tarjan.cpp
02_pooldel/datapub/: pub01.in  pub02.in  pub03.in
03_netw/: README.md  feed_pubs.sh  gen_perm.cpp  invariants.txt  netw.cpp  postup.txt
03_netw/datapub/: pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub05.out  pub06.in  pub06.out  pub07.in  pub07.out  pub08.in  pub08.out  pub09.in  pub09.out  pub10.in  pub10.out
04_cnt_leh/: README.md  cnt.cpp  feed_pubs.sh  swipe_file.cpp
04_cnt_leh/datapub/: pub04.in  pub05.in  pub05.out  pub06.in  pub06.out  pub07.in  pub07.out  pub08.in  pub08.out  pub09.in  pub09.out  pub10.in  pub10.out
05_lsword/: README.md  lsword.cpp  single_bfs.cpp  triple_search.cpp  tt.cpp
05_lsword/datapub/: pub01.in  pub01.out  pub02.in  pub02.out  pub03.in  pub03.out  pub04.in  pub05.in  pub06.in  pub06.out  pub07.in  pub07.out  pub08.in  pub08.out  pub09.in  pub09.out  pub10.in  pub10.out
06_chain_cutt/: README.md  chain.cpp
07_smug/: README.md  smug.cpp
07_smug/datapub/: pub01.in  pub01.out  pub02.in  pub02.out  pub03.in  pub03.out  pub04.in  pub04.out  pub05.in  pub05.out  pub06.in  pub06.out  pub07.in  pub07.out  pub08.in  pub08.out  pub09.in  pub09.out  pub10.in  pub10.out
08_incomp_auto/: README.md  iauto.cpp  inca_2.cpp
09_electrification/: README.md  electri.cpp  electri_ham.cpp  river_kruskal.cpp
10_editor/: README.md  editor-dp.cpp  editor.cpp
11_surv_peaks/: README.md  surv_peaks.cpp  surv_peaks_BFS.cpp
12_2nd_zk/: 2zk.cpp  README.md  feed_pubs.sh
13_3rd_zk/: 3zk.cpp  README.md  hello.cpp  prev_hello.cpp
14_4th_zk/: 4zk.cpp  README.md  feed_pubs.sh
kosaraju/: main.cpp
